# NESEmulator

./: .gitignore  AddressingMode.h  CMakeLists.txt  CPU.cpp  CPU.h  README.md  System.cpp  System.h  SystemPart.h  main.cpp
CPU/: CPU.cpp  CPU.h  StatusFlag.h
CPU/Instruction/: ArithmeticInstruction.cpp  BranchInstruction.cpp  ComparisonInstruction.cpp  DecrementIncrementInstruction.cpp  FlagInstruction.cpp  InterruptInstruction.cpp  JumpInstruction.cpp  LogicalInstruction.cpp  OtherInstruction.cpp  ShiftRotateInstruction.cpp  StackInstruction.cpp  TransferInstruction.cpp
CPU/Memory/: Memory.cpp  Memory.h
CPU/OpCode/: AddressingMode.h  Instruction.h  OpcodeHelper.h
CPU/Opcode/: Instruction.h  OpcodeHelper.h
HelperClasses/: InstructionMetadata.h
Memory/: Memory.h
ROM/: ROMReader.cpp  ROMReader.h
System/: System.cpp  System.h  SystemPart.h
info/: ROM_reading.txt  StatusFlags.txt  cpu-memory.txt  header.txt
tests/: doctest.h  tests.cpp  tests_main.cpp
tests/utils/: JsonTestReader.h
